--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <h1 class="hero__text1">Gorban Transportation</h1>
 
         <p class="hero__text2">
-          Transporting Exotic</span> and Luxury</span> Vehicles with
-          Unmatched Dedication to Continuous Improvement and
-          Customer Satisfaction.
+          Transporting Exotic and Luxury Vehicles with
+          <span>Unmatched Dedication</span> to Continuous Improvement and
+          <span>Customer Satisfaction.</span>
         </p>
       </div>
       <a class="hero__btn1 btn" href="contact">Read More</a>
