--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <!-- hero starts -->
     <section class="hero container">
-      <div class="hero__logo">
+      <!-- <div class="hero__logo">
         <img src="/public/logo.png" alt="" />
-      </div>
+      </div> -->
       <div class="hero__text">
         <!-- <h1 class="hero__text1">
           Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
