--- a/index.html
+++ b/index.html
@@ -55,28 +55,6 @@
     </header>
     <!-- header ends -->
 
-    <!-- hero starts -->
-    <section class="hero container">
-      <!-- <div class="hero__logo">
-        <img src="/public/logo.png" alt="" />
-      </div> -->
-      <div class="hero__text">
-        <!-- <h1 class="hero__text1">
-          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
-        </h1> -->
-        <h1 class="hero__text1">Gorban Transportation</h1>
-
-        <p class="hero__text2">
-          Transporting Exotic and Luxury Vehicles with
-          <span>Unmatched Dedication</span> to Continuous Improvement and
-          <span>Customer Satisfaction.</span>
-        </p>
-      </div>
-      <a class="hero__btn1 btn" href="contact">Read More</a>
-      <a class="hero__btn2 btn" href="about">Contact Us</a>
-    </section>
-    <!-- hero ends -->
-
     <!-- slider starts -->
     <div class="slider__container">
       <div
@@ -157,6 +135,29 @@
     </div>
     <!-- slider ends -->
 
+    <!-- hero starts -->
+    <section class="hero container">
+      <div class="hero__text">
+        <!-- <h1 class="hero__text1">
+          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
+        </h1> -->
+        <h1 class="hero__text1">Gorban Transportation</h1>
+
+        <p class="hero__text2">
+          Transporting Exotic and Luxury Vehicles with
+          <span>Unmatched Dedication</span> to Continuous Improvement and
+          <span>Customer Satisfaction.</span>
+        </p>
+      </div>
+      <a class="hero__btn1 btn" href="contact">Read More</a>
+      <a class="hero__btn2 btn" href="about">Contact Us</a>
+    </section>
+    <!-- hero ends -->
+
+    <div class="hero__logo">
+      <img src="/public/logo.png" alt="" />
+    </div>
+
     <!-- about starts -->
     <section class="about container">
       <div class="about__title">
@@ -185,7 +186,7 @@
           <div class="card__text">
             <h2 class="card__text1">Quick and Reliable</h2>
             <p class="card__text2">
-              With our large fleet of enclosed and open auto carriers, we
+              We have a large fleet of enclosed and open auto carriers, we
               provide quick and reliable vehicle transportation across the U.S.
               and Canada.
             </p>
