--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         <!-- <h1 class="hero__text1">
           Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
         </h1> -->
-        <h1 class="hero__text1">Gorban Transportation</h1>
+        <h1 class="hero__text1">Transporting Exotic and Luxury Vehicles</h1>
 
         <p class="hero__text2">
-          Transporting Exotic and Luxury Vehicles with
+          With
           <span>Unmatched Dedication</span> to Continuous Improvement and
           <span>Customer Satisfaction.</span>
         </p>
