--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <!-- <h1 class="hero__text1">
           Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
         </h1> -->
-        <h1 class="hero__text1">Transporting Exotic and Luxury Vehicles</h1>
+        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
 
         <p class="hero__text2">
           With
@@ -154,9 +154,9 @@
     </section>
     <!-- hero ends -->
 
-    <div class="hero__logo">
+    <!-- <div class="hero__logo">
       <img src="/public/logo.png" alt="" />
-    </div>
+    </div> -->
 
     <!-- about starts -->
     <section class="about container">
@@ -254,9 +254,77 @@
     </section>
     <!-- about ends -->
 
+    <!-- contact starts -->
+    <section class="gallery container">
+      <div>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/104842/bmw-vehicle-ride-bike-104842.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="motorbike 1"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/2116475/pexels-photo-2116475.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="motorbike 2"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/4542987/pexels-photo-4542987.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="notorbike 3"
+          />
+        </article>
+      </div>
+      <div>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/954929/pexels-photo-954929.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="mountains 1"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/950859/pexels-photo-950859.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="hand"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/1741570/pexels-photo-1741570.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="beach"
+          />
+        </article>
+      </div>
+      <div>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/1659438/pexels-photo-1659438.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="man on rock"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/1006121/pexels-photo-1006121.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="trees"
+          />
+        </article>
+        <article>
+          <img
+            src="https://images.pexels.com/photos/1785493/pexels-photo-1785493.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="sky"
+          />
+        </article>
+      </div>
+    </section>
+
+    <!-- contact ends -->
+
     <!-- footer starts -->
     <footer></footer>
     <!-- footer ends -->
+
+    <script type="module" src="./src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
