--- a/index.html
+++ b/index.html
@@ -10,18 +10,10 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Orbitron"
     />
-
-    <!-- <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    /> -->
+    <!-- Bootstrap CSS -->
     <link
-      href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css"
     />
     <title>Gorban Transportation</title>
   </head>
@@ -177,7 +169,7 @@
         <h4 class="about__text2">Gorban Transportation Inc.</h4>
       </div>
       <div class="about__holder">
-        <img class="about__img" src="/public/imgs/img13.jpg" alt="" />
+        <!-- <img class="about__img" src="/public/imgs/img13.jpg" alt="" /> -->
         <div class="about__card">
           <div class="card__icon icon">
             <svg
@@ -207,7 +199,7 @@
       </div>
 
       <div class="about__holder">
-        <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
+        <!-- <img class="about__img" src="/public/imgs/img3.jpg" alt="" /> -->
         <div class="about__card">
           <div class="card__icon icon">
             <svg
@@ -226,7 +218,7 @@
           </div>
 
           <div class="card__text">
-            <h2 class="card__text1">Prototype Focused</h2>
+            <h2 class="card__text1">Engineering Focused</h2>
             <p class="card__text2">
               We have a unique focus on transporting engineering and prototype
               vehicles.
@@ -236,7 +228,7 @@
       </div>
 
       <div class="about__holder">
-        <img class="about__img" src="/public/imgs/img1.jpg" alt="" />
+        <!-- <img class="about__img" src="/public/imgs/img1.jpg" alt="" /> -->
         <div class="about__card">
           <div class="card__icon icon">
             <svg
@@ -269,85 +261,177 @@
     <!-- contact starts -->
     <!-- contact ends -->
 
-    <div class="container gallery-container">
-      <div class="tz-gallery">
-        <div class="col-sm-12 col-md-4">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/bridge.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/bridge.jpg"
-              alt="Bridge"
-            />
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/park.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/park.jpg"
-              alt="Park"
-            />
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg"
-              alt="Tunnel"
-            />
-          </a>
-        </div>
-        <div class="col-sm-12 col-md-8">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg"
-              alt="Traffic"
-            />
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg"
-              alt="Rails"
-            />
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <a
-            class="lightbox"
-            href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg"
-          >
-            <img
-              src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg"
-              alt="Coast"
-            />
-          </a>
-        </div>
+    <!-- gallery starts -->
+    <!-- 
+Gallery is linked to lightbox using data attributes.
+
+To open lightbox, this is added to the gallery element: {data-toggle="modal" data-target="#exampleModal"}.
+
+To open carousel on correct image, this is added to each image element: {data-target="#carouselExample" data-slide-to="0"}.
+Replace '0' with corresponding slide number.
+-->
+
+    <div
+      class="row container"
+      id="gallery"
+      data-toggle="modal"
+      data-target="#exampleModal"
+    >
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="0"
+        />
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="1"
+        />
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="2"
+        />
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="3"
+        />
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
-    <script>
-      baguetteBox.run(".tz-gallery");
-    </script>
+    <!-- Modal -->
+    <!-- 
+This part is straight out of Bootstrap docs. Just a carousel inside a modal.
+-->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div
+              id="carouselExample"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#carouselExample"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#carouselExample" data-slide-to="1"></li>
+                <li data-target="#carouselExample" data-slide-to="2"></li>
+                <li data-target="#carouselExample" data-slide-to="3"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    class="d-block w-100"
+                    src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    alt="First slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    alt="Second slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    alt="Third slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    alt="Fourth slide"
+                  />
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExample"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExample"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- gallery ends -->
 
     <!-- footer starts -->
     <footer></footer>
     <!-- footer ends -->
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script src="./src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
