--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          src="/public/imgs/img1.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="0"
@@ -289,7 +289,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          src="/public/imgs/img3.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="1"
@@ -298,7 +298,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          src="/public/imgs/img4.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="2"
@@ -307,7 +307,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+          src="/public/imgs/img5.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="3"
@@ -358,28 +358,28 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    src="/public/imgs/img1.jpg"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    src="/public/imgs/img3.jpg"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    src="/public/imgs/img4.jpg"
                     alt="Third slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ"
+                    src="/public/imgs/img5.jpg"
                     alt="Fourth slide"
                   />
                 </div>
