--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@ Replace '0' with corresponding slide number.
       data-toggle="modal"
       data-target="#exampleModal"
     >
+      <div class="gallery__title">
+        <h3 class="gallery__text1">Gallery</h3>
+        <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
+      </div>
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
