--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     </section>
     <!-- hero ends -->
 
-    <!-- <div class="hero__logo">
+    <div class="hero__logo">
       <img src="/public/logo.png" alt="" />
-    </div> -->
+    </div>
 
     <!-- about starts -->
     <section class="about container">
