--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <!-- <h1 class="hero__text1">
           Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
         </h1> -->
-        <h1 class="hero__text1">Transporting Exclusive and Luxury Vehicles</h1>
+        <h1 class="hero__text1">Transporting Exotic and Luxury Vehicles</h1>
 
         <p class="hero__text2">
           With
@@ -218,7 +218,7 @@
           </div>
 
           <div class="card__text">
-            <h2 class="card__text1">Engineering Focused</h2>
+            <h2 class="card__text1">Engineered Focused</h2>
             <p class="card__text2">
               We have a unique focus on transporting engineering and prototype
               vehicles.
