--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
     >
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="modal-header">
+          <!-- <div class="modal-header">
             <button
               type="button"
               class="close"
@@ -341,7 +341,7 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
             >
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
+          </div> -->
           <div class="modal-body">
             <div
               id="carouselExample"
@@ -414,7 +414,7 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
               </a>
             </div>
           </div>
-          <div class="modal-footer">
+          <!-- <div class="modal-footer">
             <button
               type="button"
               class="btn btn-secondary"
@@ -422,7 +422,7 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
             >
               Close
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
