--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
           <span>Customer Satisfaction.</span>
         </p>
       </div>
-      <a class="hero__btn1 btn" href="contact">Explore More</a>
-      <a class="hero__btn2 btn" href="about">Contact Us</a>
+      <a class="hero__btn1 btn" href="#about">Explore More</a>
+      <a class="hero__btn2 btn" href="contact">Contact Us</a>
     </section>
     <!-- hero ends -->
 
@@ -163,6 +163,7 @@
     </div>
 
     <!-- about starts -->
+    <a name="about"></a>
     <section class="about container">
       <div class="about__title">
         <h3 class="about__text1">About</h3>
