--- a/index.html
+++ b/index.html
@@ -158,17 +158,13 @@
     </section>
     <!-- hero ends -->
 
-    <div class="hero__logo">
-      <img src="/public/logo.png" alt="" />
-    </div>
-
     <!-- about starts -->
     <a name="about"></a>
+    <div class="about__title container">
+      <h3 class="about__text1">About</h3>
+      <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
+    </div>
     <section class="about container">
-      <div class="about__title">
-        <h3 class="about__text1">About</h3>
-        <h4 class="about__text2">Gorban Transportation Inc.</h4>
-      </div>
       <div class="about__holder">
         <!-- <img class="about__img" src="/public/imgs/img13.jpg" alt="" /> -->
         <div class="about__card">
@@ -272,7 +268,7 @@ To open carousel on correct image, this is added to each image element: {data-ta
 Replace '0' with corresponding slide number.
 -->
 
-    <div class="gallery__title">
+    <div class="gallery__title container">
       <h3 class="gallery__text1">Gallery</h3>
       <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
     </div>
@@ -428,6 +424,10 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
       </div>
     </div>
     <!-- gallery ends -->
+
+    <div class="hero__logo">
+      <img src="/public/logo.png" alt="" />
+    </div>
 
     <!-- footer starts -->
     <footer></footer>
