--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <section class="about container">
       <div class="about__holder">
-        <!-- <img class="about__img" src="/public/imgs/img13.jpg" alt="" /> -->
+        <img class="about__img" src="/public/imgs/img13.jpg" alt="" />
         <div class="about__card">
           <div class="card__icon icon">
             <svg
@@ -196,7 +196,7 @@
       </div>
 
       <div class="about__holder">
-        <!-- <img class="about__img" src="/public/imgs/img3.jpg" alt="" /> -->
+        <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
         <div class="about__card">
           <div class="card__icon icon">
             <svg
@@ -225,7 +225,7 @@
       </div>
 
       <div class="about__holder">
-        <!-- <img class="about__img" src="/public/imgs/img1.jpg" alt="" /> -->
+        <img class="about__img" src="/public/imgs/img1.jpg" alt="" />
         <div class="about__card">
           <div class="card__icon icon">
             <svg
