--- a/index.html
+++ b/index.html
@@ -186,11 +186,46 @@
           </div>
 
           <div class="card__text">
-            <h2 class="card__text1">Quick and Reliable</h2>
+            <h2 class="card__text1">
+              Large fleet <br />
+              of carriers.
+            </h2>
             <p class="card__text2">
-              We have a large fleet of enclosed and open auto carriers, we
-              provide quick and reliable vehicle transportation across the U.S.
-              and Canada.
+              We have a large fleet of enclosed and open auto carriers.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="about__holder">
+        <img class="about__img" src="/public/imgs/img8.jpg" alt="" />
+        <div class="about__card">
+          <div class="card__icon icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-6"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M9.315 7.584C12.195 3.883 16.695 1.5 21.75 1.5a.75.75 0 0 1 .75.75c0 5.056-2.383 9.555-6.084 12.436A6.75 6.75 0 0 1 9.75 22.5a.75.75 0 0 1-.75-.75v-4.131A15.838 15.838 0 0 1 6.382 15H2.25a.75.75 0 0 1-.75-.75 6.75 6.75 0 0 1 7.815-6.666ZM15 6.75a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5Z"
+                clip-rule="evenodd"
+              />
+              <path
+                d="M5.26 17.242a.75.75 0 1 0-.897-1.203 5.243 5.243 0 0 0-2.05 5.022.75.75 0 0 0 .625.627 5.243 5.243 0 0 0 5.022-2.051.75.75 0 1 0-1.202-.897 3.744 3.744 0 0 1-3.008 1.51c0-1.23.592-2.323 1.51-3.008Z"
+              />
+            </svg>
+          </div>
+
+          <div class="card__text">
+            <h2 class="card__text1">
+              Quick and <br />
+              Reliable.
+            </h2>
+            <p class="card__text2">
+              We provide quick and reliable vehicle transportation across the
+              U.S. and Canada.
             </p>
           </div>
         </div>
@@ -218,7 +253,10 @@
           </div>
 
           <div class="card__text">
-            <h2 class="card__text1">Engineered Focused</h2>
+            <h2 class="card__text1">
+              Engineered <br />
+              Focused.
+            </h2>
             <p class="card__text2">
               We have a unique focus on transporting engineering and prototype
               vehicles.
@@ -246,7 +284,10 @@
           </div>
 
           <div class="card__text">
-            <h2 class="card__text1">Safe and Efficient</h2>
+            <h2 class="card__text1">
+              Safe and <br />
+              Efficient.
+            </h2>
             <p class="card__text2">
               We have extensive experience in moving autonomous vehicles,
               ensuring their safe and efficient delivery.
