--- a/index.html
+++ b/index.html
@@ -159,21 +159,17 @@
     <!-- hero ends -->
 
     <!-- about starts -->
-    <div class="about__title container">
-      <a name="about"></a>
-      <h3 class="about__text1">About</h3>
-      <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
-    </div>
+    <a name="about"></a>
+    <h3 class="section__title container">About</h3>
     <section class="about container">
-      <div class="about__holder">
+      <div class="about__card">
         <img class="about__img" src="/public/imgs/img13.jpg" alt="" />
-        <div class="about__card">
-          <div class="card__icon icon">
+        <div class="about__info">
+          <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
               fill="currentColor"
-              class="size-6"
             >
               <path
                 d="M3.375 4.5C2.339 4.5 1.5 5.34 1.5 6.375V13.5h12V6.375c0-1.036-.84-1.875-1.875-1.875h-8.25ZM13.5 15h-12v2.625c0 1.035.84 1.875 1.875 1.875h.375a3 3 0 1 1 6 0h3a.75.75 0 0 0 .75-.75V15Z"
@@ -184,28 +180,24 @@
               <path d="M19.5 19.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z" />
             </svg>
           </div>
-
-          <div class="card__text">
-            <h2 class="card__text1">
-              Large fleet <br />
-              of carriers.
-            </h2>
-            <p class="card__text2">
-              We have a large fleet of enclosed and open auto carriers.
-            </p>
-          </div>
+          <h2 class="about__text1">
+            Large fleet <br />
+            of carriers.
+          </h2>
+          <p class="about__text2">
+            We have a large fleet of enclosed and open auto carriers.
+          </p>
         </div>
       </div>
 
-      <div class="about__holder">
+      <div class="about__card">
         <img class="about__img" src="/public/imgs/img8.jpg" alt="" />
-        <div class="about__card">
-          <div class="card__icon icon">
+        <div class="about__info">
+          <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
               fill="currentColor"
-              class="size-6"
             >
               <path
                 fill-rule="evenodd"
@@ -217,29 +209,25 @@
               />
             </svg>
           </div>
-
-          <div class="card__text">
-            <h2 class="card__text1">
-              Quick and <br />
-              Reliable.
-            </h2>
-            <p class="card__text2">
-              We provide quick and reliable vehicle transportation across the
-              U.S. and Canada.
-            </p>
-          </div>
+          <h2 class="about__text1">
+            Quick and <br />
+            Reliable.
+          </h2>
+          <p class="about__text2">
+            We provide quick and reliable vehicle transportation across the U.S.
+            and Canada.
+          </p>
         </div>
       </div>
 
-      <div class="about__holder">
+      <div class="about__card">
         <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
-        <div class="about__card">
-          <div class="card__icon icon">
+        <div class="about__info">
+          <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
               fill="currentColor"
-              class="size-6"
             >
               <path
                 d="M17.004 10.407c.138.435-.216.842-.672.842h-3.465a.75.75 0 0 1-.65-.375l-1.732-3c-.229-.396-.053-.907.393-1.004a5.252 5.252 0 0 1 6.126 3.537ZM8.12 8.464c.307-.338.838-.235 1.066.16l1.732 3a.75.75 0 0 1 0 .75l-1.732 3c-.229.397-.76.5-1.067.161A5.23 5.23 0 0 1 6.75 12a5.23 5.23 0 0 1 1.37-3.536ZM10.878 17.13c-.447-.098-.623-.608-.394-1.004l1.733-3.002a.75.75 0 0 1 .65-.375h3.465c.457 0 .81.407.672.842a5.252 5.252 0 0 1-6.126 3.539Z"
@@ -251,24 +239,21 @@
               />
             </svg>
           </div>
-
-          <div class="card__text">
-            <h2 class="card__text1">
-              Engineered <br />
-              Focused.
-            </h2>
-            <p class="card__text2">
-              We have a unique focus on transporting engineering and prototype
-              vehicles.
-            </p>
-          </div>
+          <h2 class="about__text1">
+            Engineered <br />
+            Focused.
+          </h2>
+          <p class="about__text2">
+            We have a unique focus on transporting engineering and prototype
+            vehicles.
+          </p>
         </div>
       </div>
 
-      <div class="about__holder">
+      <div class="about__card">
         <img class="about__img" src="/public/imgs/img1.jpg" alt="" />
-        <div class="about__card">
-          <div class="card__icon icon">
+        <div class="about__info">
+          <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -282,17 +267,14 @@
               />
             </svg>
           </div>
-
-          <div class="card__text">
-            <h2 class="card__text1">
-              Safe and <br />
-              Efficient.
-            </h2>
-            <p class="card__text2">
-              We have extensive experience in moving autonomous vehicles,
-              ensuring their safe and efficient delivery.
-            </p>
-          </div>
+          <h2 class="about__text1">
+            Safe and <br />
+            Efficient.
+          </h2>
+          <p class="about__text2">
+            We have extensive experience in moving autonomous vehicles, ensuring
+            their safe and efficient delivery.
+          </p>
         </div>
       </div>
     </section>
