--- a/index.html
+++ b/index.html
@@ -161,9 +161,12 @@
     <!-- about starts -->
     <a name="about"></a>
     <h3 class="section__title container">About</h3>
-    <section class="about container">
+    <div class="hero__logo">
+      <img src="/public/logo.png" alt="" />
+    </div>
+    <section class="about">
       <div class="about__card">
-        <img class="about__img" src="/public/imgs/img13.jpg" alt="" />
+        <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
             <svg
@@ -191,7 +194,7 @@
       </div>
 
       <div class="about__card">
-        <img class="about__img" src="/public/imgs/img8.jpg" alt="" />
+        <img class="about__img" src="/public/imgs/img7.JPG" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
             <svg
@@ -306,7 +309,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="/public/imgs/img1.jpg"
+          src="/public/imgs/img5.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="0"
@@ -315,7 +318,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="/public/imgs/img3.jpg"
+          src="/public/imgs/img5.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="1"
@@ -324,7 +327,7 @@ Replace '0' with corresponding slide number.
       <div class="col-12 col-sm-6 col-lg-3">
         <img
           class="w-100"
-          src="/public/imgs/img4.jpg"
+          src="/public/imgs/img5.jpg"
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="2"
@@ -337,6 +340,24 @@ Replace '0' with corresponding slide number.
           alt="First slide"
           data-target="#carouselExample"
           data-slide-to="3"
+        />
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="/public/imgs/img5.jpg"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="4"
+        />
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img
+          class="w-100"
+          src="/public/imgs/img5.jpg"
+          alt="First slide"
+          data-target="#carouselExample"
+          data-slide-to="5"
         />
       </div>
     </div>
@@ -379,26 +400,28 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
                 <li data-target="#carouselExample" data-slide-to="1"></li>
                 <li data-target="#carouselExample" data-slide-to="2"></li>
                 <li data-target="#carouselExample" data-slide-to="3"></li>
+                <li data-target="#carouselExample" data-slide-to="4"></li>
+                <li data-target="#carouselExample" data-slide-to="5"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="/public/imgs/img1.jpg"
+                    src="/public/imgs/img5.jpg"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="/public/imgs/img3.jpg"
+                    src="/public/imgs/img5.jpg"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="/public/imgs/img4.jpg"
+                    src="/public/imgs/img5.jpg"
                     alt="Third slide"
                   />
                 </div>
@@ -407,6 +430,20 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
                     class="d-block w-100"
                     src="/public/imgs/img5.jpg"
                     alt="Fourth slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="/public/imgs/img5.jpg"
+                    alt="Fifth slide"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="d-block w-100"
+                    src="/public/imgs/img5.jpg"
+                    alt="Sixth slide"
                   />
                 </div>
               </div>
@@ -449,10 +486,6 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
       </div>
     </div>
     <!-- gallery ends -->
-
-    <div class="hero__logo">
-      <img src="/public/logo.png" alt="" />
-    </div>
 
     <!-- footer starts -->
     <footer></footer>
