--- a/index.html
+++ b/index.html
@@ -283,206 +283,57 @@
     </section>
     <!-- about ends -->
 
-    <!-- contact starts -->
-    <!-- contact ends -->
-
-    <!-- gallery starts -->
-    <!-- 
-Gallery is linked to lightbox using data attributes.
-
-To open lightbox, this is added to the gallery element: {data-toggle="modal" data-target="#exampleModal"}.
-
-To open carousel on correct image, this is added to each image element: {data-target="#carouselExample" data-slide-to="0"}.
-Replace '0' with corresponding slide number.
--->
-
     <div class="gallery__title container">
       <h3 class="gallery__text1">Gallery</h3>
       <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
     </div>
-    <div
-      class="row container"
-      id="gallery"
-      data-toggle="modal"
-      data-target="#exampleModal"
-    >
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="0"
-        />
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="1"
-        />
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="2"
-        />
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="3"
-        />
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="4"
-        />
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <img
-          class="w-100"
-          src="/public/imgs/img5.jpg"
-          alt="First slide"
-          data-target="#carouselExample"
-          data-slide-to="5"
-        />
-      </div>
-    </div>
 
-    <!-- Modal -->
-    <!-- 
-This part is straight out of Bootstrap docs. Just a carousel inside a modal.
--->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      role="dialog"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <!-- <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div> -->
-          <div class="modal-body">
-            <div
-              id="carouselExample"
-              class="carousel slide"
-              data-ride="carousel"
-            >
-              <ol class="carousel-indicators">
-                <li
-                  data-target="#carouselExample"
-                  data-slide-to="0"
-                  class="active"
-                ></li>
-                <li data-target="#carouselExample" data-slide-to="1"></li>
-                <li data-target="#carouselExample" data-slide-to="2"></li>
-                <li data-target="#carouselExample" data-slide-to="3"></li>
-                <li data-target="#carouselExample" data-slide-to="4"></li>
-                <li data-target="#carouselExample" data-slide-to="5"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="First slide"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="Second slide"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="Third slide"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="Fourth slide"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="Fifth slide"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    class="d-block w-100"
-                    src="/public/imgs/img5.jpg"
-                    alt="Sixth slide"
-                  />
-                </div>
-              </div>
-              <a
-                class="carousel-control-prev"
-                href="#carouselExample"
-                role="button"
-                data-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a
-                class="carousel-control-next"
-                href="#carouselExample"
-                role="button"
-                data-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-          <!-- <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-          </div> -->
-        </div>
+    <!-- gallery starts -->
+    <div class="gallery-container container">
+      <div class="gallery-item" data-index="1">
+        <img
+          src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
+        />
+      </div>
+      <div class="gallery-item" data-index="2">
+        <img
+          src="https://images.pexels.com/photos/5969/wood-nature-forest-bridge.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
+        />
+      </div>
+      <div class="gallery-item" data-index="3">
+        <img
+          src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
+        />
+      </div>
+      <div class="gallery-item" data-index="4">
+        <img
+          src="https://images.pexels.com/photos/373920/pexels-photo-373920.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+        />
+      </div>
+      <div class="gallery-item" data-index="5">
+        <img
+          src="https://images.pexels.com/photos/164241/pexels-photo-164241.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+        />
+      </div>
+      <div class="gallery-item" data-index="6">
+        <img
+          src="https://images.pexels.com/photos/417054/pexels-photo-417054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+      <div class="gallery-item" data-index="7">
+        <img
+          src="https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+      <div class="gallery-item" data-index="8">
+        <img
+          src="https://images.pexels.com/photos/38326/pexels-photo-38326.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+      <div class="gallery-item" data-index="9">
+        <img
+          src="https://images.pexels.com/photos/266691/pexels-photo-266691.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
       </div>
     </div>
     <!-- gallery ends -->
