--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     </div>
 
     <!-- gallery starts -->
-    <div class="">
+    <div class="container">
       <div class="row">
         <a
           href="https://unsplash.it/1200/768.jpg?image=251"
