--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     <!-- about starts -->
     <a name="about"></a>
     <h3 class="section__title main-wrapper">About</h3>
-    <div class="hero__logo">
+    <!-- <div class="hero__logo">
       <img src="/public/logo.png" alt="" />
-    </div>
+    </div> -->
     <section class="about">
       <div class="about__card">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
@@ -302,77 +302,68 @@
     </div>
 
     <!-- gallery starts -->
-    <div class="container">
-      <div class="row">
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=251"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=251"
-            class="img-fluid rounded"
-          />
-        </a>
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=252"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=252"
-            class="img-fluid rounded"
-          />
-        </a>
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=253"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=253"
-            class="img-fluid rounded"
-          />
-        </a>
-      </div>
-      <div class="row">
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=254"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=254"
-            class="img-fluid rounded"
-          />
-        </a>
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=255"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=255"
-            class="img-fluid rounded"
-          />
-        </a>
-        <a
-          href="https://unsplash.it/1200/768.jpg?image=256"
-          data-toggle="lightbox"
-          data-gallery="gallery"
-          class="col-md-4"
-        >
-          <img
-            src="https://unsplash.it/600.jpg?image=256"
-            class="img-fluid rounded"
-          />
-        </a>
-      </div>
+    <div class="gallery main-wrapper">
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=251"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=251"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=252"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=252"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=253"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=253"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
+
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=254"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=254"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=255"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=255"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
+      <a
+        href="https://unsplash.it/1200/768.jpg?image=256"
+        data-toggle="lightbox"
+        data-gallery="gallery"
+      >
+        <img
+          src="https://unsplash.it/600.jpg?image=256"
+          class="img-fluid custom-thumbnail"
+        />
+      </a>
     </div>
     <!-- gallery ends -->
 
