--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           Improvement and Customer Satisfaction.
         </p>
         <div class="hero__btns">
-          <a class="hero__btn1 btn" href="#" id="copyEmail">
+          <button class="hero__btn1 btn" id="copyEmail">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -110,8 +110,8 @@
               />
             </svg>
             <div>gortrans@live.com</div>
-          </a>
-          <a class="hero__btn2 btn" href="#" id="copyPhone">
+          </button>
+          <button class="hero__btn2 btn" id="copyPhone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -127,7 +127,7 @@
               />
             </svg>
             <div>+(314)-504-7886</div>
-          </a>
+          </button>
         </div>
       </div>
     </section>
