--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <body>
     <!-- header starts -->
-    <header class="header main-wrapper">
+    <header class="header">
       <div class="header__left">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
         <div class="header__text">
@@ -72,190 +72,146 @@
     </header>
     <!-- header ends -->
 
-    <!-- hero starts -->
-
-    <section class="hero main-wrapper">
-      <div class="hero__text">
-        <!-- <h1 class="hero__text1">
-          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
-        </h1> -->
-        <!-- <h1 class="hero__text1">
-          Transporting Exotic <br />
-          and Luxury Vehicles
-        </h1> -->
-        <h1 class="hero__text1">
-          Gorban <br />
-          Transportation Inc.
-        </h1>
-
-        <p class="hero__text2">
-          Transporting Exotic and Luxury Vehicles <br />
-          With Unmatched Dedication to Continuous <br />
-          Improvement and Customer Satisfaction.
-        </p>
-        <div class="hero__btns">
-          <button class="hero__btn1 btn" id="copyEmail">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="hero__icon"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
-              />
-            </svg>
-            <div>gortrans@live.com</div>
-          </button>
-          <button class="hero__btn2 btn" id="copyPhone">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="hero__icon"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"
-              />
-            </svg>
-            <div>+(314)-504-7886</div>
-          </button>
-        </div>
-      </div>
-    </section>
-    <!-- hero ends -->
-
     <!-- slider starts -->
-    <div class="slider__container">
-      <div
-        class="slider"
-        style="--width: 250px; --height: 205px; --quantity: 10"
-      >
-        <div class="slider__list">
-          <div class="slider__item" style="--position: 1">
-            <a
-              href="/public/imgs/img4.jpg"
-              data-toggle="lightbox"
-              data-gallery="gallery"
-              ><img src="/public/imgs/img4.jpg" alt=""
-            /></a>
+    <div class="hero__container-slider">
+      <div class="slider__container">
+        <!-- <div
+          class="slider"
+          style="--width: 250px; --height: 205px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.JPG" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img11.jpg" alt="" />
+            </div>
           </div>
-          <div class="slider__item" style="--position: 2">
-            <img src="/public/imgs/img5.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 3">
-            <img src="/public/imgs/img6.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 4">
-            <img src="/public/imgs/img7.JPG" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 5">
-            <img src="/public/imgs/img8.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 6">
-            <img src="/public/imgs/img9.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 7">
-            <img src="/public/imgs/img10.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 8">
-            <img src="/public/imgs/img1.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 9">
-            <img src="/public/imgs/img2.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 10">
-            <img src="/public/imgs/img11.jpg" alt="" />
-          </div>
-        </div>
-      </div>
+        </div> -->
 
-      <div
-        class="slider"
-        reverse="true"
-        style="--width: 250px; --height: 205px; --quantity: 10"
-      >
-        <div class="slider__list">
-          <div class="slider__item" style="--position: 1">
-            <img src="/public/imgs/img10.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 2">
-            <img src="/public/imgs/img9.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 3">
-            <img src="/public/imgs/img8.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 4">
-            <img src="/public/imgs/img7.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 5">
-            <img src="/public/imgs/img6.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 6">
-            <img src="/public/imgs/img5.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 7">
-            <img src="/public/imgs/img4.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 8">
-            <img src="/public/imgs/img3.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 9">
-            <img src="/public/imgs/img2.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 10">
-            <img src="/public/imgs/img1.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="slider"
-        style="--width: 250px; --height: 185px; --quantity: 10"
-      >
-        <div class="slider__list">
-          <div class="slider__item" style="--position: 1">
-            <img src="/public/imgs/img4.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 2">
-            <img src="/public/imgs/img5.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 3">
-            <img src="/public/imgs/img6.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 4">
-            <img src="/public/imgs/img7.JPG" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 5">
-            <img src="/public/imgs/img8.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 6">
-            <img src="/public/imgs/img9.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 7">
-            <img src="/public/imgs/img10.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 8">
-            <img src="/public/imgs/img1.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 9">
-            <img src="/public/imgs/img2.jpg" alt="" />
-          </div>
-          <div class="slider__item" style="--position: 10">
-            <img src="/public/imgs/img11.jpg" alt="" />
+        <div
+          class="slider"
+          reverse="true"
+          style="--width: 250px; --height: 185px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img3.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- slider ends -->
+
+    <div class="hero__container">
+      <!-- hero starts -->
+      <section class="hero main-wrapper">
+        <div class="hero__text">
+          <h1 class="hero__text1">
+            Gorban <br />
+            Transportation
+          </h1>
+
+          <p class="hero__text2">
+            Transporting Exotic and Luxury Vehicles <br />
+            With Unmatched Dedication to Continuous <br />
+            Improvement and Customer Satisfaction.
+          </p>
+          <div class="hero__btns">
+            <button class="hero__btn1 btn" id="copyEmail">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="hero__icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+                />
+              </svg>
+              <p>gortrans@live.com</p>
+            </button>
+            <button class="hero__btn2 btn" id="copyPhone">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="hero__icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"
+                />
+              </svg>
+              <p>+(314)-504-7886</p>
+            </button>
+          </div>
+        </div>
+        <div class="hero__logo">
+          <img class="header__logo" src="/logo.png" alt="Logo image" />
+        </div>
+      </section>
+      <!-- hero ends -->
+    </div>
 
     <!-- about starts -->
     <a name="about"></a>
@@ -385,7 +341,7 @@
     </div>
 
     <!-- gallery starts -->
-    <a name="gallery"></a>
+    <!-- <a name="gallery"></a>
     <div class="gallery main-wrapper">
       <a
         href="https://unsplash.it/1200/768.jpg?image=251"
@@ -448,7 +404,7 @@
           class="img-fluid custom-thumbnail"
         />
       </a>
-    </div>
+    </div> -->
     <!-- gallery ends -->
 
     <!-- contact starts -->
