--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             </a>
           </div>
         </div>
-        <div class="hero__logo">
+        <!-- <div class="hero__logo">
           <img class="header__logo" src="/logo.png" alt="Logo image" />
-        </div>
+        </div> -->
       </section>
       <!-- hero ends -->
     </div>
