--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </svg>
               <div>gortrans@live.com</div>
             </a>
-            <a class="hero__btn2 btn" href="tel:3145047886">
+            <a class="hero__btn2 btn" href="tel:+13145047886">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
