--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
   </head>
 
   <body>
+    <a name="home"></a>
     <!-- header starts -->
     <header class="header">
-      <div class="header__left">
-        <img class="header__logo" src="/logo.png" alt="Logo image" />
-        <div class="header__text">
-          <span class="header__text1">gorban</span>
-          <span class="header__text2">transportation</span>
-        </div>
-      </div>
+      <a class="header__link" href="#home"
+        ><div class="header__left">
+          <img class="header__logo" src="/logo.png" alt="Logo image" />
+          <div class="header__text">
+            <span class="header__text1">gorban</span>
+            <span class="header__text2">transportation</span>
+          </div>
+        </div></a
+      >
 
       <!-- header menu starts -->
       <nav>
@@ -73,6 +76,7 @@
     <!-- header ends -->
 
     <!-- slider starts -->
+    <a name="about"></a>
     <div class="hero__container-slider">
       <div class="slider__container">
         <!-- <div
