--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     </div>
 
     <!-- gallery starts -->
-    <!-- <a name="gallery"></a>
+    <a name="gallery"></a>
     <div class="gallery main-wrapper">
       <a
         href="https://unsplash.it/1200/768.jpg?image=251"
@@ -408,7 +408,7 @@
           class="img-fluid custom-thumbnail"
         />
       </a>
-    </div> -->
+    </div>
     <!-- gallery ends -->
 
     <!-- contact starts -->
